# Advanced-Image-Sensor-Interface

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP_v2.0.0.md  TODO.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-full.txt  requirements.in  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_support.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  buffer_benchmarks.py  noise_analysis.py  performance_benchmark.py  speed_tests.py
docs/: api_documentation.md  api_reference.md  calibration.md  conf.py  design_specs.md  hardware_integration.md  index.rst  performance_analysis.md  protocol_coaxpress.md  protocol_comparison_guide.md  protocol_gige_vision.md  protocol_mipi_csi2.md  protocol_usb3_vision.md  protocols.md  protocols_index.md  requirements.txt  testing_guide.md
docs/_static/: custom.css
docs/source/: conf.py
examples/: advanced_integration_example.py  ai_ml_enhancements.py  basic_usage.py  comprehensive_demo.py  custom_extension.py  protocol_implementations.py
scripts/: automated_testing.py  data_analysis.py  simulation.py
src/advanced_image_sensor_interface/: __init__.py  _version.py  types.py
src/advanced_image_sensor_interface/config/: __init__.py  constants.py
src/advanced_image_sensor_interface/error_handling/: __init__.py  circuit_breaker.py  exceptions.py  monitoring.py  recovery.py  retry.py
src/advanced_image_sensor_interface/performance/: __init__.py  cache.py  monitor.py  optimizer.py  profiler.py
src/advanced_image_sensor_interface/sensor_interface/: __init__.py  advanced_power_management.py  advanced_processing.py  buffer_management.py  enhanced_sensor.py  gpu_acceleration.py  hdr_processing.py  image_validation.py  mipi_driver.py  mipi_protocol.py  multi_sensor_sync.py  power_backends.py  power_management.py  protocol_selector.py  raw_processing.py  security.py  signal_processing.py
src/advanced_image_sensor_interface/sensor_interface/calibration/: __init__.py  models.py  neural_tuner.py
src/advanced_image_sensor_interface/sensor_interface/protocol/: __init__.py  base.py
src/advanced_image_sensor_interface/sensor_interface/protocol/coaxpress/: __init__.py  driver.py
src/advanced_image_sensor_interface/sensor_interface/protocol/gige/: __init__.py  driver.py
src/advanced_image_sensor_interface/sensor_interface/protocol/mipi/: __init__.py  driver.py
src/advanced_image_sensor_interface/sensor_interface/protocol/usb3/: __init__.py  discovery.py  driver.py  streaming.py
src/advanced_image_sensor_interface/test_patterns/: __init__.py  pattern_generator.py
src/advanced_image_sensor_interface/utils/: __init__.py  buffer_manager.py  noise_reduction.py  performance_metrics.py
src/sensor_interface/: __init__.py  mipi_driver.py  power_management.py  signal_processing.py
src/test_patterns/: __init__.py  pattern_generator.py
src/utils/: __init__.py  noise_reduction.py  performance_metrics.py
stubs/cupy/: __init__.pyi
stubs/skimage/: __init__.pyi  color.pyi  filters.pyi
stubs/smbus/: __init__.pyi
tests/: __init__.py  conftest.py  test_buffer_manager.py  test_config.py  test_enhanced_features.py  test_image_validation.py  test_integration_pipelines.py  test_mipi_driver.py  test_mipi_protocol.py  test_performance_metrics.py  test_power_management.py  test_security.py  test_signal_processing.py
